--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "clipboard": "^2.0.6",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
