--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "clipboard": "^2.0.6",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "moment": "^2.29.1",
     "nodemon": "^2.0.6",
+    "req-flash": "0.0.3",
     "socket.io": "^3.0.4",
     "uuid": "^8.3.1"
   }
